--- a/templatedjango/apptemplate/templates/compras/listado_compras.html
+++ b/templatedjango/apptemplate/templates/compras/listado_compras.html
@@ -26,8 +26,8 @@
                         <td>120.000</td>
                         <td>
                             {% load static %}
-                            <i style="color: white; padding:0 10px ;" type="button" ; data-toggle="modal" ;
-                                data-target="#exampleModalCenter" ;>
+                            <i style="color: white; padding:0 10px;" type="button" data-toggle="modal"
+                                data-target="#exampleModalCenter">
                                 {% load static %}
                                 <img src="{% static '/assets/icons/icon_alert-circle-exc.svg' %}" alt="">
                             </i>
