cambios en la vista de produccion

--- a/templatedjango/apptemplate/templates/produccion/produccion.html
+++ b/templatedjango/apptemplate/templates/produccion/produccion.html
@@ -166,8 +166,8 @@
                                                                             // selecion = document.getElementById("prueba")
                                                                             // var opciones = '';
                                                                             // var tabla_valor = '';
-                                                                            opciones = document.getElementsByClassName("categorias{{producto.id_produccion}}");
-                                                                            tabla_valor = document.getElementById("producto{{producto.id_produccion}}");
+                                                                            var opciones = document.getElementsByClassName("categorias{{producto.id_produccion}}");
+                                                                            var tabla_valor = document.getElementById("producto{{producto.id_produccion}}");
 
                                                                             for (var i = 0; i < opciones.length; i++)
                                                                             {
